--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -22,9 +22,9 @@
 
 <nav class="navbar navbar-expand-lg text-primary font-weight-bold">
     <div class="container-fluid">
-        <a class="navbar-brand text-white h1 fs-1 mt-2" href="{{ path('app_home_user') }}">
-            <img src="{{ asset('images/logo_alternatif.png') }}" class="me-3 mb-1" width="50" alt="logo hospitime">
-            HOSPITIME
+        <a class="d-flex navbar-brand text-white h1 fs-1 mt-2" href="{{ path('app_home_user') }}" style="max-width: 70%">
+            <img src="{{ asset('images/logo_alternatif.png') }}" class="img-fluid me-3" style="max-width: 15%" alt="logo hospitime"
+            ><p class="mb-0 pb-2">HOSPITIME</p>
         </a>
         <button class="navbar-toggler bg-light" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
