--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -50,8 +50,12 @@
                         <a class="nav-link active btn btn-outline-light" href="{{ path('app_availability_show', {id: app.user.id}) }}">Voir mes disponibilités</a>
                     </li>
                     <li class="nav-item">
+                        <a class="nav-link active btn btn-outline-light" href="{{ path('app_health_professional_patients') }}">Voir mes patients</a>
+                    </li>
+                    <li class="nav-item">
                         <a class="nav-link active btn btn-outline-light" href="#">Réserver matériel</a>
                     </li>
+
                 {% endif %}
                     </ul>
             {% if is_granted('IS_AUTHENTICATED_FULLY') %}
