Ajout d'un margin-bot au conteneur

--- a/templates/health_professional/list_patients.html.twig
+++ b/templates/health_professional/list_patients.html.twig
@@ -5,7 +5,7 @@
 {% endblock %}
 
 {% block body %}
-    <div class="container mt-5">
+    <div class="container mt-5 mb-5">
         <div class="row">
             <div class="col-12">
                 <h1 class="display-4 text-center mb-4">Liste de vos patients</h1>
