--- a/templates/availability/_showAll.html.twig
+++ b/templates/availability/_showAll.html.twig
@@ -18,13 +18,13 @@
                 <td>{{ availability.endTime|date('H:i') }}</td>
                 {% if availability.recurrenceType is not null %}
                     <td>
-                            {% if availability.recurrenceType == 1 %}
-                                Toutes les semaines
-                            {% elseif availability.recurrenceType == 2 %}
-                                Tous les mois
-                            {% elseif availability.recurrenceType == 3 %}
-                                Tous les ans
-                            {% endif %}
+                        {% if availability.recurrenceType == 1 %}
+                            Toutes les semaines
+                        {% elseif availability.recurrenceType == 2 %}
+                            Tous les mois
+                        {% elseif availability.recurrenceType == 3 %}
+                            Tous les ans
+                        {% endif %}
                     </td>
                 {% endif %}
                 <td>
@@ -41,16 +41,20 @@
                                     <h2 class="fs-5" id="modalLabel-{{ availability.id }}">Aperçu</h2>
                                 </div>
                                 <div class="modal-body">
-                                    <ul>
+                                    <table>
                                         {% for slot in availability.availabilitySplitSlots %}
-                                            <li class="elementAvailabilitySplitSlots">
-                                                {{ slot.startTime|date('H:i') }} - {{ slot.endTime|date('H:i') }}
-                                                <a href="{{ path('app_availability_delete', {id: slot.id, type: 1}) }}">
-                                                    <span class="material-symbols-outlined text-danger">delete</span>
-                                                </a>
-                                            </li>
+                                            <tr class="elementAvailabilitySplitSlots">
+                                                <td>
+                                                    &#x2192; {{ slot.startTime|date('H:i') }} - {{ slot.endTime|date('H:i') }}
+                                                </td>
+                                                <td>
+                                                    <a href="{{ path('app_availability_delete', {id: slot.id, type: 1}) }}">
+                                                        <span class="material-symbols-outlined text-danger">delete</span>
+                                                    </a>
+                                                </td>
+                                            </tr>
                                         {% endfor %}
-                                    </ul>
+                                    </table>
                                 </div>
                             </div>
                         </div>
