Ajout de la redirection pour le bouton Prendre un rendez-vous

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -37,7 +37,7 @@
                         <a class="nav-link active btn btn-outline-light" href="{{ path('app_user_consultations') }}">Mes rendez-vous</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link active btn btn-outline-light" href="#">Prendre un rendez-vous</a>
+                        <a class="nav-link active btn btn-outline-light" href="{{ path('app_consultation_create') }}">Prendre un rendez-vous</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link active btn btn-outline-light" href="{{ path('app_faq') }}">Voir la FAQ</a>
