Ajout d'un bouton pour télécharger l'ordonnance en tant que patient

--- a/templates/patient/_consultation.html.twig
+++ b/templates/patient/_consultation.html.twig
@@ -4,9 +4,7 @@
         <th>Heure de Début</th>
         <th>Heure de Fin</th>
         <th>Praticien</th>
-        {% if type == 'future' %}
-            <th>Actions</th>
-        {% endif %}
+        <th>Actions</th>
     </tr>
     {% if appointments is not empty %}
         {% for appointment in appointments %}
@@ -29,12 +27,14 @@
                     {% endfor %}
                     {{ healthprofessionalArray|join(', ') }}
                 </td>
+                <td>
                 {% if appointment.date > date() %}
-                    <td>
                         <a href="{{ path('app_consultation_update', {id: appointment.id}) }}" class="text-primary" title="Modifier"><span class="material-symbols-outlined">edit</span></a>
                         <a href="{{ path('app_consultation_delete', {id: appointment.id}) }}" class="text-danger" title="Supprimer" onclick="return confirm('Êtes-vous sûr de vouloir supprimer cette consultation ?')"><span class="material-symbols-outlined">delete</span></a>
-                    </td>
+                {% elseif appointment.prescription is not empty %}
+                    <a href="{{ path('app_consultation_pdf', { id: appointment.id }) }}" class="text-success"><span class="material-symbols-outlined">download</span></a>
                 {% endif %}
+                </td>
             </tr>
         {% endfor %}
     {% else %}
