Ajout twig politiques de confidentialité

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -73,11 +73,11 @@
 <footer class="bg-dark mt-auto py-3">
     <ul class="nav justify-content-evenly border-bottom pb-3 mb-3">
         <li class="nav-item"><a href="{{ path('app_home') }}" class="nav-link px-2 text-white">Accueil</a></li>
-        <li class="nav-item"><a href="#" class="nav-link px-2 text-white">Conditions d'utilisation</a></li>
+        <li class="nav-item"><a href="{{ path('app_cgu') }}" class="nav-link px-2 text-white">Conditions d'utilisation</a></li>
         <li class="nav-item"><a href="{{ path('app_faq') }}" class="nav-link px-2 text-white">Foire aux questions</a></li>
-        <li class="nav-item"><a href="#" class="nav-link px-2 text-white">A propos</a></li>
+        <li class="nav-item"><a href="{{ path('app_about_us') }}" class="nav-link px-2 text-white">A propos</a></li>
         <li class="nav-item"><a href="{{ path('app_contact_page') }}" class="nav-link px-2 text-white">Nous contacter</a></li>
-        <li class="nav-item"><a href="#" class="nav-link px-2 text-white">Politique de confidentialité</a></li>
+        <li class="nav-item"><a href="{{ path('app_privacy_policies') }}" class="nav-link px-2 text-white">Politique de confidentialité</a></li>
     </ul>
     <p class="text-center text-white">&copy; 2025 HOSPITIME. Tous droits réservés.</p>
 </footer>
